# GP-INASC

./: .gitignore  CMakeLists.txt  package.xml  test_gpr.cpp
include/ground_extraction/: GroundExtraction.h
launch/: gp_insac.launch  gp_insac_test.launch  gpinsac.launch  gpinsac_origin.launch
src/: CMakeLists.txt  GaussianProcessRegression.hxx  GroundExtraction.cpp  GroundExtraction.h  INSAC.h  main.cpp  test_gpr.cpp
src/ground_extraction/: Boundary.cpp  GaussianProcessRegression.hxx  GroundExtraction.cpp  GroundExtraction.h  INSAC.cpp  SectorPartition.cpp  SectorPartition.h
src/test/: CMakeLists.txt  test.cpp
test/: test.cpp
